==> JDSCS-Club/AMP_5_8/File/Drivers/display/Adafruit_SSD1306.cpp <==
#include <stdio.h>
#include <stdlib.h>
#include "string.h"
#include "math.h"               //  min()
#include "PHan_Lib.h"           //  PHan_HanFontLoad()
#include "unicode.h"            //  UTF8ToCP949()
#include "x86_hal_driver.h"     //  HAL_Delay()
#include "stm32f4xx.h"
#define max(a,b) (((a) > (b)) ? (a) : (b))
#define min(a,b) (((a) < (b)) ? (a) : (b))
#define SSD1306_CMD   0x00
#define SSD1306_DATA  0x40
#define pgm_read_byte(addr) (*(const unsigned char *)(addr))
#define ssd1306_swap(a, b) { int16_t t = a; a = b; b = t; }

void Adafruit_SSD1306::begin(uint8_t vccstate, uint8_t i2caddr, bool reset)
{
  _vccstate = vccstate;
  _i2caddr = i2caddr;

  // Init sequence
  ssd1306_command(SSD1306_DISPLAYOFF);                    // 0xAE
  ssd1306_command(SSD1306_SETDISPLAYCLOCKDIV);            // 0xD5
  ssd1306_command(0x80);                                  // the suggested ratio 0x80

  ssd1306_command(SSD1306_SETMULTIPLEX);                  // 0xA8
  ssd1306_command(0x7F);
   
     
  
  //ssd1306_command(SSD1306_LCDHEIGHT - 1);

  ssd1306_command(SSD1306_SETDISPLAYOFFSET);              // 0xD3
  ssd1306_command(0x62);                                   // no offset
  
  ssd1306_command(SSD1306_SETSTARTLINE | 0x0);            // line #0
  
    ssd1306_command(0xAD);
    ssd1306_command(0x8B);
    ssd1306_command(0xA1);
    ssd1306_command(0xC8);
    ssd1306_command(0xDA);
      
    ssd1306_command(0x12);
      
    ssd1306_command(0x81);
    ssd1306_command(0x80);
    
    ssd1306_command(0xD9);
    ssd1306_command(0x22);
      
    ssd1306_command(0xDB);
    ssd1306_command(0x40);
      
    ssd1306_command(0xA6);
    ssd1306_command(0xAF);
        
      
        /*
  ssd1306_command(SSD1306_CHARGEPUMP);                    // 0x8D
  if (vccstate == SSD1306_EXTERNALVCC)
    { ssd1306_command(0x10); }
  else
    { ssd1306_command(0x14); }
      
        
  ssd1306_command(SSD1306_MEMORYMODE);                    // 0x20
  ssd1306_command(0x00);                                  // 0x0 act like ks0108
  ssd1306_command(SSD1306_SEGREMAP | 0x1);
  ssd1306_command(SSD1306_COMSCANDEC);

 #if defined SSD1306_128_32
  ssd1306_command(SSD1306_SETCOMPINS);                    // 0xDA
  ssd1306_command(0x02);
  ssd1306_command(SSD1306_SETCONTRAST);                   // 0x81
  ssd1306_command(0x8F);

#elif defined SSD1306_128_64
  ssd1306_command(SSD1306_SETCOMPINS);                    // 0xDA
  ssd1306_command(0x12);
  ssd1306_command(SSD1306_SETCONTRAST);                   // 0x81
  if (vccstate == SSD1306_EXTERNALVCC)
    { ssd1306_command(0x9F); }
  else
    { ssd1306_command(0xCF); }

#elif defined SSD1306_96_16
  ssd1306_command(SSD1306_SETCOMPINS);                    // 0xDA
  ssd1306_command(0x2);   //ada x12
  ssd1306_command(SSD1306_SETCONTRAST);                   // 0x81
  if (vccstate == SSD1306_EXTERNALVCC)
    { ssd1306_command(0x10); }
  else
    { ssd1306_command(0xAF); }

#endif

  ssd1306_command(SSD1306_SETPRECHARGE);                  // 0xd9
  if (vccstate == SSD1306_EXTERNALVCC)
    { ssd1306_command(0x22); }
  else
    { ssd1306_command(0xF1); }
  ssd1306_command(SSD1306_SETVCOMDETECT);                 // 0xDB
  ssd1306_command(0x40);
  ssd1306_command(SSD1306_DISPLAYALLON_RESUME);           // 0xA4
  ssd1306_command(SSD1306_NORMALDISPLAY);                 // 0xA6

  ssd1306_command(SSD1306_DEACTIVATE_SCROLL);

  ssd1306_command(SSD1306_DISPLAYON);//--turn on oled panel
  
    
      */
}

void Adafruit_SSD1306::ssd1306_command(uint8_t c)
{
  Buffer_CMD[1] = c;
#if defined(_WIN32)
#else   //  STM32
  while(HAL_I2C_Master_Transmit(&hi2c1,_i2caddr,Buffer_CMD,0x02,0x10) != HAL_OK)
  {

  }
#endif
}

void Adafruit_SSD1306::display(void) 
{
  ssd1306_command(SSD1306_COLUMNADDR);
  ssd1306_command(0);   // Column start address (0 = reset)
  ssd1306_command(SSD1306_LCDWIDTH-1); // Column end address (127 = reset)

  ssd1306_command(SSD1306_PAGEADDR);
  ssd1306_command(0); // Page start address (0 = reset)
  #if SSD1306_LCDHEIGHT == 64
    ssd1306_command(7); // Page end address
  #endif
  #if SSD1306_LCDHEIGHT == 32
    ssd1306_command(3); // Page end address
  #endif
  #if SSD1306_LCDHEIGHT == 16
    ssd1306_command(1); // Page end address
  #endif
  
  // save I2C bitrate
#ifdef TWBR
  uint8_t twbrbackup = TWBR;
  TWBR = 12; // upgrade to 400KHz!
#endif

//I2C write
  for (uint16_t i=0; i<(SSD1306_LCDWIDTH*SSD1306_LCDHEIGHT/8); i += 128) 
  {
    
    ssd1306_data(i);
  }

#ifdef TWBR
    TWBR = twbrbackup;
#endif
  
}
