==> dchwebb/PlayDice/Adafruit_ssd1306.cpp <==
#include <avr/pgmspace.h>
#include <pgmspace.h>
#define pgm_read_byte(addr) (*(const unsigned char *)(addr))
#include <util/delay.h>
#include <stdlib.h>
#include <Wire.h>
#include <SPI.h>
#include "Adafruit_GFX.h"
#include "Adafruit_SSD1306.h"
#include <iterator>		// DW
#define ssd1306_swap(a, b) { int16_t t = a; a = b; b = t; }

void Adafruit_SSD1306::begin(uint8_t vccstate, uint8_t i2caddr, bool reset) {
	_vccstate = vccstate;
	_i2caddr = i2caddr;
	forceUpdate = 1;
	//	Serial.print("begin sid: "); Serial.println(sclk);  Serial.print(" h: "); Serial.println(SSD1306_LCDHEIGHT);

	// set pin directions
	if (sid != -1) {
		pinMode(dc, OUTPUT);
		pinMode(cs, OUTPUT);
#ifdef HAVE_PORTREG
		csport = portOutputRegister(digitalPinToPort(cs));
		cspinmask = digitalPinToBitMask(cs);
		dcport = portOutputRegister(digitalPinToPort(dc));
		dcpinmask = digitalPinToBitMask(dc);
#endif
		if (!hwSPI) {
			// set pins for software-SPI
			pinMode(sid, OUTPUT);
			pinMode(sclk, OUTPUT);
#ifdef HAVE_PORTREG
			clkport = portOutputRegister(digitalPinToPort(sclk));
			clkpinmask = digitalPinToBitMask(sclk);
			mosiport = portOutputRegister(digitalPinToPort(sid));
			mosipinmask = digitalPinToBitMask(sid);
#endif
		}
		if (hwSPI) {
			SPI.begin();
#ifdef SPI_HAS_TRANSACTION
			SPI.beginTransaction(SPISettings(8000000, MSBFIRST, SPI_MODE0));
#else
			SPI.setClockDivider(4);
#endif
		}
	}
	else
	{
		// I2C Init
		Wire.begin();

		// Set the I2C to FM mode - 400KHz!
		// TWBR = (CPU_CLK / I2C_CLK) -16 /2
		// TWBR = ((16,000,000 / 400,000) - 16) / 2 = 12
		TWBR = 12;

#ifdef __SAM3X8E__
		// Force 400 KHz I2C, rawr! (Uses pins 20, 21 for SDA, SCL)
		TWI1->TWI_CWGR = 0;
		TWI1->TWI_CWGR = ((VARIANT_MCK / (2 * 400000)) - 4) * 0x101;
#endif
	}
	if ((reset) && (rst >= 0)) {
		// Setup reset pin direction (used by both SPI and I2C)
		pinMode(rst, OUTPUT);
		digitalWrite(rst, HIGH);
		// VDD (3.3V) goes high at start, lets just chill for a ms
		delay(1);
		// bring reset low
		digitalWrite(rst, LOW);
		// wait 10ms
		delay(10);
		// bring out of reset
		digitalWrite(rst, HIGH);
		// turn on VCC (9V?)
	}

	// Init sequence
	ssd1306_command(SSD1306_DISPLAYOFF);                    // 0xAE
	ssd1306_command(SSD1306_SETDISPLAYCLOCKDIV);            // 0xD5
	ssd1306_command(0x80);                                  // the suggested ratio 0x80

	ssd1306_command(SSD1306_SETMULTIPLEX);                  // 0xA8
	ssd1306_command(SSD1306_LCDHEIGHT - 1);

	ssd1306_command(SSD1306_SETDISPLAYOFFSET);              // 0xD3
	ssd1306_command(0x0);                                   // no offset
	ssd1306_command(SSD1306_SETSTARTLINE | 0x0);            // line #0
	ssd1306_command(SSD1306_CHARGEPUMP);                    // 0x8D
	if (vccstate == SSD1306_EXTERNALVCC)
	{
		ssd1306_command(0x10);
	}
	else
	{
		ssd1306_command(0x14);
	}
	ssd1306_command(SSD1306_MEMORYMODE);                    // 0x20
	ssd1306_command(0x00);                                  // 0x0 act like ks0108
	ssd1306_command(SSD1306_SEGREMAP | 0x1);
	ssd1306_command(SSD1306_COMSCANDEC);

#if defined SSD1306_128_32
	ssd1306_command(SSD1306_SETCOMPINS);                    // 0xDA
	ssd1306_command(0x02);
	ssd1306_command(SSD1306_SETCONTRAST);                   // 0x81
	ssd1306_command(0x8F);

#elif defined SSD1306_128_64
	ssd1306_command(SSD1306_SETCOMPINS);                    // 0xDA
	ssd1306_command(0x12);
	ssd1306_command(SSD1306_SETCONTRAST);                   // 0x81
	if (vccstate == SSD1306_EXTERNALVCC)
	{
		ssd1306_command(0x9F);
	}
	else
	{
		ssd1306_command(0xCF);
	}

#elif defined SSD1306_96_16
	ssd1306_command(SSD1306_SETCOMPINS);                    // 0xDA
	ssd1306_command(0x2);   //ada x12
	ssd1306_command(SSD1306_SETCONTRAST);                   // 0x81
	if (vccstate == SSD1306_EXTERNALVCC)
	{
		ssd1306_command(0x10);
	}
	else
	{
		ssd1306_command(0xAF);
	}

#endif

	ssd1306_command(SSD1306_SETPRECHARGE);                  // 0xd9
	if (vccstate == SSD1306_EXTERNALVCC)
	{
		ssd1306_command(0x22);
	}
	else
	{
		ssd1306_command(0xF1);
	}
	ssd1306_command(SSD1306_SETVCOMDETECT);                 // 0xDB
	ssd1306_command(0x40);
	ssd1306_command(SSD1306_DISPLAYALLON_RESUME);           // 0xA4
	ssd1306_command(SSD1306_NORMALDISPLAY);                 // 0xA6

	ssd1306_command(SSD1306_DEACTIVATE_SCROLL);

	ssd1306_command(SSD1306_DISPLAYON);//--turn on oled panel

}

void Adafruit_SSD1306::ssd1306_command(uint8_t c) {
	if (sid != -1)
	{
		// SPI
#ifdef HAVE_PORTREG
		*csport |= cspinmask;
		*dcport &= ~dcpinmask;
		*csport &= ~cspinmask;
#else
		digitalWrite(cs, HIGH);
		digitalWrite(dc, LOW);
		digitalWrite(cs, LOW);
#endif
		fastSPIwrite(c);
#ifdef HAVE_PORTREG
		*csport |= cspinmask;
#else
		digitalWrite(cs, HIGH);
#endif
	}
	else
	{
		// I2C
		uint8_t control = 0x00;   // Co = 0, D/C = 0
		Wire.beginTransmission(_i2caddr);
		Wire.write(control);
		Wire.write(c);
		Wire.endTransmission();
	}
}

boolean Adafruit_SSD1306::display(boolean fullUpdate) {
	if (fullUpdate) {
		forceUpdate = 1;
	}
	display();
}

boolean Adafruit_SSD1306::display(void) {
	// DW if no changes required do not update display
	if (forceUpdate == 0 && std::equal(std::begin(buffer), std::end(buffer), std::begin(bufferprev))) {
		return 0;
	}

	if (sid != -1)
	{
		if (forceUpdate == 0) {
			// DW use page mode so we can draw only changes
			if (screenMode != 0x02) {
				ssd1306_command(0x20);		// OLED_CMD_SET_MEMORY_ADDR_MODE
				ssd1306_command(0x02);		// 0x00 = HORZ mode ; 0x01 = VERT ; 0x02 = PAGE
				screenMode = 0x02;
			}
			uint16_t b = 0;
			for (uint16_t row = 0; row < 8; row++) { //row - top to bottom
				ssd1306_command(0xB0 + row);		// B0~B7 row to start on (called 'page' in docs)

				const uint16_t blockSize = 8;		// to adjust trade off between updating more blocks versus each block being smaller
				for (uint16_t i = 0; i < blockSize; i++) {	// column - left to right

															// test if block has changed to see if we need to redraw
					boolean changed = 0;
					for (uint8_t x = 0; x < 128 / blockSize; x++) {	// 16 vertical strips from left to right
						if (buffer[b + x] != bufferprev[b + x]) {
							bufferprev[b + x] = buffer[b + x];
							changed = 1;
						}
					}

					if (changed) {
						//Serial.print("Refresh block "); Serial.println(b);
						uint8_t highbyte = ((b % 128) >> 4);
						uint8_t lowbyte = (b % 128) - (highbyte << 4);

						digitalWrite(cs, HIGH);
						digitalWrite(dc, LOW);
						digitalWrite(cs, LOW);

						fastSPIwrite(lowbyte);			// 00~0F Lower byte Column Start Address for Page Addressing Mode 
						fastSPIwrite(0x10 + highbyte);	// 10~1F Higher byte Column Start Address for Page Addressing Mode 

						digitalWrite(cs, HIGH);
						digitalWrite(dc, HIGH);
						digitalWrite(cs, LOW);

						for (uint8_t x = 0; x < 128 / blockSize; x++) {	// 8 vertical strips from left to right
							fastSPIwrite(buffer[b]);
							b++;
						}
						digitalWrite(cs, HIGH);
						
						// returning after each block update results in more but significantly faster updates
						return 1;
					}
					else {
						b += 128 / blockSize;
					}
				}
			}
		}
		else {
			//Serial.println("full update");
			if (screenMode != 0x00) {
				ssd1306_command(0x20);		// OLED_CMD_SET_MEMORY_ADDR_MODE
				ssd1306_command(0x00);		// 0x00 = HORZ mode ; 0x01 = VERT ; 0x02 = PAGE
				screenMode = 0x00;
			}
			ssd1306_command(SSD1306_COLUMNADDR);
			ssd1306_command(0);   // Column start address (0 = reset)
			ssd1306_command(SSD1306_LCDWIDTH - 1); // Column end address (127 = reset)

			ssd1306_command(SSD1306_PAGEADDR);
			ssd1306_command(0); // Page start address (0 = reset)
			ssd1306_command(7); // Page end address

			digitalWrite(cs, HIGH);
			digitalWrite(dc, HIGH);
			digitalWrite(cs, LOW);

			for (uint16_t i = 0; i < (SSD1306_LCDWIDTH*SSD1306_LCDHEIGHT / 8); i++) {
				fastSPIwrite(buffer[i]);
			}
			digitalWrite(cs, HIGH);
			std::copy(std::begin(buffer), std::end(buffer), std::begin(bufferprev));

		}
	}
	else {


		// I2C
		if (forceUpdate == 0) {
			// DW use page mode so we can draw only changes
			if (screenMode != 0x02) {
				Wire.beginTransmission(_i2caddr);
				Wire.write(0x20);		// OLED_CMD_SET_MEMORY_ADDR_MODE
				Wire.write(0x02);		// 0x00 = HORZ mode ; 0x01 = VERT ; 0x02 = PAGE
				Wire.endTransmission();
				screenMode = 0x02;
			}
			uint16_t b = 0;
			for (uint16_t row = 0; row < 8; row++) { //row - top to bottom
				//	set row
				Wire.beginTransmission(_i2caddr);
				Wire.write(0x00);			// command stream
				Wire.write(0xB0 + row);		// B0~B7 row to start on (called 'page' in docs)
				Wire.endTransmission();

				const uint16_t blockSize = 8;		// to adjust trade off between updating more blocks versus each block being smaller
				for (uint16_t i = 0; i < blockSize; i++) {	// column - left to right

					// test if block has changed to see if we need to redraw
					boolean changed = 0;
					for (uint8_t x = 0; x < 128 / blockSize; x++) {	// 16 vertical strips from left to right
						if (buffer[b + x] != bufferprev[b + x]) {
							bufferprev[b + x] = buffer[b + x];
							changed = 1;
						}
					}

					if (changed) {
						//Serial.print("Refresh block "); Serial.println(b);
						uint8_t highbyte = ((b % 128) >> 4);
						uint8_t lowbyte = (b % 128) - (highbyte << 4);

						Wire.beginTransmission(_i2caddr);
						Wire.write(0x00);				// command stream
						Wire.write(lowbyte);			// 00~0F Lower byte Column Start Address for Page Addressing Mode 
						Wire.write(0x10 + highbyte);	// 10~1F Higher byte Column Start Address for Page Addressing Mode 
						Wire.endTransmission();

						Wire.beginTransmission(_i2caddr);
						Wire.write(0x40);				// data stream
						for (uint8_t x = 0; x < 128 / blockSize; x++) {	// 8 vertical strips from left to right

							if (changed) {
								Wire.write(buffer[b]);
							}
							b++;
						}
						Wire.endTransmission();
					}
					else {
						b += 128 / blockSize;
					}
				}
			}

		}
		else
		{
			if (screenMode != 0x00) {
				Wire.beginTransmission(_i2caddr);
				Wire.write(0x20);		// OLED_CMD_SET_MEMORY_ADDR_MODE
				Wire.write(0x00);		// 0x00 = HORZ mode ; 0x01 = VERT ; 0x02 = PAGE
				Wire.endTransmission();
				screenMode = 0x00;
			}

			ssd1306_command(SSD1306_COLUMNADDR);
			ssd1306_command(0);   // Column start address (0 = reset)
			ssd1306_command(SSD1306_LCDWIDTH - 1); // Column end address (127 = reset)

			ssd1306_command(SSD1306_PAGEADDR);
			ssd1306_command(0); // Page start address (0 = reset)
			ssd1306_command(7); // Page end address

			//Serial.println("Force Update");
			for (uint16_t i = 0; i < (SSD1306_LCDWIDTH*SSD1306_LCDHEIGHT / 8); i++) {
				// send a bunch of data in one xmission
				Wire.beginTransmission(_i2caddr);
				WIRE_WRITE(0x40);
				for (uint8_t x = 0; x < 16; x++) {
					WIRE_WRITE(buffer[i]);
					i++;
				}
				i--;
				Wire.endTransmission();
			}
			std::copy(std::begin(buffer), std::end(buffer), std::begin(bufferprev));
		}


	}
	// DW - capture previous buffer to check for changes
	forceUpdate = 0;
	return 1;
}
